--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,29 +1,49 @@
-<div class="container mt-4">
+<div id="modal-login" class="modal">
+    <div class="modal-content">
+        <div class="col-md-4 mx-auto">
+            <h1 class="text-center">Log In</h1>
+            <form class="alertAppend" id="loginform">
+                <div class="form-group">
+                    <label for="emailInput">Email address</label>
+                    <input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp">
+                </div>
+                <div class="form-group">
+                    <label for="passwordInput">Password</label>
+                    <input type="password" class="form-control" id="passwordInput">
+                </div>
+                <button id="submitBtn" type="submit" class="btn btn-primary">Submit</button>
+            </form>
+            <br>
+        </div>
         <div class="row">
             <div class="col-md-4 mx-auto">
-                <h1 class="text-center">Log In</h1>
-                <form class="alertAppend">
+                <h1 class="text-center">Register</h1>
+                <form class="alertAppendReg" id="regform">
                     <div class="form-group">
-                        <label for="emailInput">Email address</label>
-                        <input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp">
+                        <label for="emailInputReg">Email address</label>
+                        <input type="email" class="form-control" id="emailInputReg" aria-describedby="emailHelp">
                     </div>
                     <div class="form-group">
-                        <label for="passwordInput">Password</label>
-                        <input type="password" class="form-control" id="passwordInput">
+                        <label for="passwordInputReg">Password</label>
+                        <input type="password" class="form-control" id="passwordInputReg">
                     </div>
-                    <button id="submitBtn" type="submit" class="btn btn-primary">Submit</button>
-                    <small class="form-text text-muted">Not Registered Yet..? <a
-                            href="/user/register">Register</a></small>
+                    <div class="form-group">
+                        <label for="passwordTwoInputReg">Confirm Password</label>
+                        <input type="password" class="form-control" id="passwordTwoInputReg">
+                    </div>
+                    <button id="submitBtnReg" type="submit" class="btn btn-primary">Submit</button>
                 </form>
             </div>
         </div>
     </div>
+</div>
 <div id="spaceDiv" class="container">
     <div class="row">
         <div class="col-8-md">
             <br>
         </div>
     </div>
+</div>
 </div>
 
 
@@ -55,11 +75,13 @@
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.0.min.js"
-        integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
-    <script type="text/javascript" src="/js/register.js"></script>
+    integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+<script type="text/javascript" src="/js/register.js"></script>
+<script type="text/javascript" src="/js/login.js"></script>
+<script type="text/javascript" src="/js/modal.js"></script>
