--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -8,6 +8,17 @@
         </div>
         {{!-- sub-row2 --}}
         <div class="row">
+            <div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">These are some websites with more information.</p>
+    <a href="#" class="card-link">https://www.dare.org/</a>
+    <a href="#" class="card-link">https://www.naddi.org/</a>
+    <a href="#" class="card-link">https://www.crimeline.org/</a>
+    <a href="#" class="card-link">https://www.dea.gov/</a>
+    <a href="#" class="card-link">https://www.dea.gov/hidta</a>
+  </div>
+</div>
 
         </div>
 
