--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -4,6 +4,33 @@
     <div class="col sm 4">
         {{!-- sub-row1 --}}
         <div class="row">
+div>
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="container">
+                <h5>Find the state or country of your choosing</h5>
+            </div>
+            <div class="row">
+                <div class="buttonBox">
+                    <div class="buttons-view"></div>
+                </div>
+            </div>
+            <br>
+            <div id="search-box">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="container">
+                            <input id="topic" class="white-text" type="text" placeholder="topic">
+                            <form class="create-form">
+                                <button type="button" class="btn btn-outline-secondary">Search</button></i>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
         </div>
         {{!-- sub-row2 --}}
