structure still under construction

--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -1,79 +1,53 @@
-{{!-- main row --}}
-<div class=" row container-fluid">
-    {{!-- column1 --}}
-    <div class="col sm 4">
-        {{!-- sub-row1 --}}
-        <div class="row">
-div>
+{{!-- main container --}}
+<div class="container-fluid">
+    {{!-- row1 --}}
     <div class="row">
-        <div class="col-sm-12">
-            <div class="container">
-                <h5>Find the state or country of your choosing</h5>
-            </div>
-            <div class="row">
-                <div class="buttonBox">
-                    <div class="buttons-view"></div>
-                </div>
-            </div>
-            <br>
-            <div id="search-box">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="container">
-                            <input id="topic" class="white-text" type="text" placeholder="topic">
-                            <form class="create-form">
-                                <button type="button" class="btn btn-outline-secondary">Search</button></i>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {{!-- column1 --}}
+        <div class="col-sm-5">
+
+           
+           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente praesentium natus tempora dignissimos, soluta assumenda numquam quasi illum ipsam incidunt enim ab commodi repudiandae ullam necessitatibus corporis impedit eius accusantium.         
+         
     </div>
-</div>
 
-        </div>
-        {{!-- sub-row2 --}}
-        <div class="row">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">These are some websites with more information.</p>
-                    <a href="#" class="card-link">https://www.dare.org/</a>
-                    <a href="#" class="card-link">https://www.naddi.org/</a>
-                    <a href="#" class="card-link">https://www.crimeline.org/</a>
-                    <a href="#" class="card-link">https://www.dea.gov/</a>
-                    <a href="#" class="card-link">https://www.dea.gov/hidta</a>
-                </div>
-            </div>
-
-        </div>
-
-    </div>
     {{!-- column2 --}}
-    <div class="col sm 4">
-        {{!-- sub-row1 --}}
-        <div class="row">
-
-        </div>
-        {{!-- sub-row2 --}}
-        <div class="row">
-
-        </div>
-
-
+    <div class="col-sm-5">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, nesciunt enim. Distinctio ratione et tempora incidunt doloremque ut asperiores, quis, sunt iste quam cum esse magnam! Alias minima dolore dolores?
     </div>
     {{!-- column3 --}}
-    <div class="col sm 4">
-        <div id="police">
-
-        </div>
+    <div class="col-sm-2">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim molestias voluptatem itaque voluptates accusamus. Ex accusantium repellendus iste quo hic, labore nostrum laborum, porro numquam voluptatum perferendis, voluptatibus quidem ad?
 
     </div>
 
-
+{{!-- row2 --}}
+    <div class="row">
+        {{!-- column1 --}}
+        <div class="col-sm-5">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">These are some websites with more information.</p>
+                <a href="#" class="card-link">https://www.dare.org/</a>
+                <a href="#" class="card-link">https://www.naddi.org/</a>
+                <a href="#" class="card-link">https://www.crimeline.org/</a>
+                <a href="#" class="card-link">https://www.dea.gov/</a>
+                <a href="#" class="card-link">https://www.dea.gov/hidta</a>
+            </div>
+        </div>
+        </div>
+        {{!-- column2 --}}
+        <div class="col-sm-5">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum doloremque architecto iste tempora perferendis ad, ipsa ducimus ratione vero voluptates hic voluptatibus deserunt, itaque perspiciatis fuga. Officiis, magnam? Porro, est.
+        </div>
+          {{!-- column3 --}}
+        <div class="col-sm-2">
+            <div id="police"></div>
+            
+        </div>
+    </div>
 </div>
 
 
 
-<script type="text/javascript" src="/js/index.js"></script>
+    <script type="text/javascript" src="/js/index.js"></script>
