structure still under construction

--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -16,7 +16,7 @@
     </div>
     {{!-- column3 --}}
     <div class="col-sm-2">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim molestias voluptatem itaque voluptates accusamus. Ex accusantium repellendus iste quo hic, labore nostrum laborum, porro numquam voluptatum perferendis, voluptatibus quidem ad?
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim molestias voluptatem itaque voluptates accusamus. Ex accusantium repellendus iste quo hic, labore nostrum laborum, porro numquam voluptatum perferendis, voluptatibus quidem ad?unihlinhln
 
     </div>
 
