search form added

--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -5,8 +5,25 @@
         {{!-- column1 --}}
         <div class="col-sm-5">
 
-           
-           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente praesentium natus tempora dignissimos, soluta assumenda numquam quasi illum ipsam incidunt enim ab commodi repudiandae ullam necessitatibus corporis impedit eius accusantium.         
+        <h3>Search:</h3>
+        <p>Please enter the correct information as stated</p>
+        <p>in the examples below for correct results.</p>
+      <form class="create-form">
+
+        <div class="form-group">
+          <label for="st">State:</label>
+          <input type="text" id="st" name="name" placeholder="ex. Florida">
+          <hr>
+          <label for="co">County:</label>
+          <input type="text" id="co" name="name" placeholder="ex. Orange County">
+          <hr>
+          <label for="yr">Year:</label>
+          <input type="text" id="yr" name="name" placeholder="2003 - 2017 ex. 2003">
+        </div>
+
+
+        <button type="submit">Search</button>
+      </form>        
          
     </div>
 
