forms and cards

--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -5,49 +5,85 @@
         {{!-- column1 --}}
         <div class="col-sm-5">
 
-           
-           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente praesentium natus tempora dignissimos, soluta assumenda numquam quasi illum ipsam incidunt enim ab commodi repudiandae ullam necessitatibus corporis impedit eius accusantium.         
-         
-    </div>
 
-    {{!-- column2 --}}
-    <div class="col-sm-5">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, nesciunt enim. Distinctio ratione et tempora incidunt doloremque ut asperiores, quis, sunt iste quam cum esse magnam! Alias minima dolore dolores?
-    </div>
-    {{!-- column3 --}}
-    <div class="col-sm-2">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim molestias voluptatem itaque voluptates accusamus. Ex accusantium repellendus iste quo hic, labore nostrum laborum, porro numquam voluptatum perferendis, voluptatibus quidem ad?unihlinhln
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente praesentium natus tempora dignissimos,
+            soluta assumenda numquam quasi illum ipsam incidunt enim ab commodi repudiandae ullam necessitatibus
+            corporis impedit eius accusantium.
 
-    </div>
-
-{{!-- row2 --}}
-    <div class="row">
-        {{!-- column1 --}}
-        <div class="col-sm-5">
-        <div class="card" style="width: 18rem;">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">These are some websites with more information.</p>
-                <a href="#" class="card-link">https://www.dare.org/</a>
-                <a href="#" class="card-link">https://www.naddi.org/</a>
-                <a href="#" class="card-link">https://www.crimeline.org/</a>
-                <a href="#" class="card-link">https://www.dea.gov/</a>
-                <a href="#" class="card-link">https://www.dea.gov/hidta</a>
-            </div>
         </div>
-        </div>
+
         {{!-- column2 --}}
         <div class="col-sm-5">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum doloremque architecto iste tempora perferendis ad, ipsa ducimus ratione vero voluptates hic voluptatibus deserunt, itaque perspiciatis fuga. Officiis, magnam? Porro, est.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, nesciunt enim. Distinctio ratione et tempora
+            incidunt doloremque ut asperiores, quis, sunt iste quam cum esse magnam! Alias minima dolore dolores?
         </div>
-          {{!-- column3 --}}
+        {{!-- column3 --}}
         <div class="col-sm-2">
-            <div id="police"></div>
-            
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim molestias voluptatem itaque voluptates
+            accusamus. Ex accusantium repellendus iste quo hic, labore nostrum laborum, porro numquam voluptatum
+            perferendis, voluptatibus quidem ad?unihlinhln
+
+        </div>
+
+        {{!-- row2 --}}
+        <div class="row">
+            {{!-- column1 --}}
+            <div class="col-sm-5">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Helpful Resources</h5>
+                        <p class="card-text">These are some websites with more information about our current problems with opioid.</p>
+                        <a href="#" class="card-link">https://www.dare.org/</a>
+                        <br>
+                        <a href="#" class="card-link">https://www.naddi.org/</a>
+                        <br>
+                        <a href="#" class="card-link">https://www.crimeline.org/</a>
+                        <br>
+                        <a href="#" class="card-link">https://www.dea.gov/</a>
+                        <br>
+                        <a href="#" class="card-link">https://www.dea.gov/hidta</a>
+                        <br>
+                    </div>
+                </div>
+            </div>
+            {{!-- column2 --}}
+             <div class="col-sm-5">
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <img src="https://static01.nyt.com/images/2020/04/13/upshot/13up-health-opioids1/merlin_165415239_a5691fb3-0a47-4b01-ad6d-b1171ca41194-jumbo.jpg?quality=90&auto=webp" class="card-img" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">The Coronavirus Pandemic Has Made The Opioid Epidemic Even Worse</h5>
+        <p class="card-text">Deaths from drug overdoses are likely to increase during the coronavirus outbreak because of disruption to recovery routines and access to treatment, according to counselors and people whose rehabilitation depends on daily care..</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <p class="card-text"><small class="text-muted">Reference: https://www.buzzfeednews.com/article/otilliasteadman/coronavirus-opioids-overdoses</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+            {{!-- column3 --}}
+            <div class="col-sm-2">
+                <div id="police"></div>
+
+            </div>
         </div>
     </div>
-</div>
 
 
 
     <script type="text/javascript" src="/js/index.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+   
