--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -22,7 +22,7 @@
                 </div>
 
 
-                <button type="submit">Search</button>
+                <button type="submit" id="subButton">Search</button>
             </form>
 
         </div>
