--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -1,3 +1,23 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+    <a class="navbar-brand" href="/">Auth with Passport</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link text-primary" href="/user/login">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/user/register">Register</a>
+            </li>
+             <li class="nav-item">
+            <a class="btn text-right text-white mr-4 bg-white text-dark" href="/auth/logout">Logout</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 {{!-- main container --}}
 <div class="container-fluid">
     {{!-- row1 --}}
