--- a/views/partials/info/info-block.handlebars
+++ b/views/partials/info/info-block.handlebars
@@ -1,8 +1,7 @@
 <li>
-	{{burger_name}}
-	{{#if devour}}
-	<button class="change-eat" data-id="{{id}}" data-newdevour="{{devour}}">
-		Eat it!
-	</button>
-	{{/if}}
+    {{Year}}
+	{{State}}
+    {{County}}
+    {{Deathrate}}
+    {{Population}}
 </li>
