--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -15,6 +15,9 @@
             </ul>
         </div>
     </nav>
+
+
+
     <div class="container mt-4">
         <div class="row">
             <div class="col-md-4 mx-auto">
@@ -35,4 +38,11 @@
             </div>
         </div>
     </div>
+
+<p style="text-align:center;">
+<iframe width="420" height="315" align="middle"
+src="https://www.youtube.com/embed/s4LV0tBZncI?controls=0">
+</iframe>
+</p>
+
    <script type="text/javascript" src="/js/login.js"></script>
