--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -48,7 +48,15 @@
         </div>
 
         {{!-- column2 --}}
+
         <div class="col-sm-5">
+            <li>
+             {{Year}}
+	         {{State}}
+              {{County}}
+              {{Deathrate}}
+             {{Population}}
+            </li>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, nesciunt enim. Distinctio ratione et tempora
             incidunt doloremque ut asperiores, quis, sunt iste quam cum esse magnam! Alias minima dolore dolores?
         </div>
