--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -50,13 +50,10 @@
         {{!-- column2 --}}
 
         <div class="col-sm-5">
-            <li>
-             {{Year}}
-	         {{State}}
-              {{County}}
-              {{Deathrate}}
-             {{Population}}
-            </li>
+          <ul class="infoStats">
+
+          </ul> 
+            
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, nesciunt enim. Distinctio ratione et tempora
             incidunt doloremque ut asperiores, quis, sunt iste quam cum esse magnam! Alias minima dolore dolores?
         </div>
