--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-        <a class="navbar-brand" href="/">Auth with Passport</a>
+        <a class="navbar-brand" href="/">InfODose</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
