--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -54,7 +54,9 @@
 
         <div class="col-sm-5">
 
-          <ul class="infoStats"> </ul> 
+          <div class="infoStats"> 
+          </div> 
+          
 
         </div>
         {{!-- column3 --}}
