--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -40,7 +40,9 @@
                             <hr>
                             <label for="yr">Year:</label>
                             <input type="text" id="yr" name="name" placeholder="2003 - 2017 ex. 2003">
+                             <div id="warning"></div>
                         </div>
+                       
 
 
                         <button type="submit" id="subButton">Search</button>
