fixing info page

--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -110,7 +110,7 @@
                                     <p class="card-text">Deaths from drug overdoses are likely to increase during the
                                         coronavirus outbreak because of disruption to recovery routines and access to
                                         treatment,
-                                        according to counselors and people whose rehabilitation depends on daily care..
+                                        according to counselors and people whose rehabilitation depends on daily care.
                                     </p>
                                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                                     <p class="card-text"><small class="text-muted">Reference:
