--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+  <nav class="navbar navbar-expand-lg mb-4 " id="navbarLogin">
         <a class="navbar-brand" href="/">InfODose</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,9 +18,9 @@
 
 
 
-    <div class="container mt-4">
+    <div class="container mt-4" >
         <div class="row">
-            <div class="col-md-4 mx-auto">
+            <div class="col-md-4 mx-auto" id="loginDiv">
                 <h1 class="text-center">Log In</h1>
                 <form class="alertAppend">
                     <div class="form-group">
