--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -34,7 +34,6 @@
                             <p>Please enter the correct information as stated</p>
                             <p>in the examples below for correct results.</p>
                             <form class="create-form">
-
                                 <div class="form-group">
                                     <label for="st">State:</label>
                                     <input type="text" id="st" name="name" placeholder="ex. Florida">
@@ -46,12 +45,8 @@
                                     <input type="text" id="yr" name="name" placeholder="2003 - 2017 ex. 2003">
                                     <div id="warning"></div>
                                 </div>
-
-
-
                                 <button type="submit" id="subButton">Search</button>
                             </form>
-
                         </div>
                     </div>
             </div>
@@ -87,31 +82,37 @@
             {{!-- news col --}}
             <div class="col-sm-6">
                 <div class="card">
-                    <div class="card-body">
-                        <div class="row no-gutters">
-                            <div class="col-md-4">
-                                <img src="https://static01.nyt.com/images/2020/04/13/upshot/13up-health-opioids1/merlin_165415239_a5691fb3-0a47-4b01-ad6d-b1171ca41194-jumbo.jpg?quality=90&auto=webp"
-                                    class="card-img" alt="...">
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">The Coronavirus Pandemic Has Made The Opioid Epidemic Even
-                                        Worse</h5>
-                                    <p class="card-text">Deaths from drug overdoses are likely to increase during the
-                                        coronavirus outbreak because of disruption to recovery routines and access to
-                                        treatment,
-                                        according to counselors and people whose rehabilitation depends on daily care.
-                                    </p>
-                                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                                    <p class="card-text"><small class="text-muted">Reference:
-                                            https://www.buzzfeednews.com/article/otilliasteadman/coronavirus-opioids-overdoses</small>
-                                    </p>
+                            <div class="card-body">
+                                <div class="row no-gutters">
+                                    <div class="col">
+                                        <img src="https://static01.nyt.com/images/2020/04/13/upshot/13up-health-opioids1/merlin_165415239_a5691fb3-0a47-4b01-ad6d-b1171ca41194-jumbo.jpg?quality=90&auto=webp"
+                                            class="card-img" alt="...">
+                                    </div>
+                                    <div class="col">
+                                        <div class="card-body">
+                                            <h5 class="card-title">The Coronavirus Pandemic Has Made The Opioid Epidemic
+                                                Even
+                                                Worse</h5>
+                                            <p class="card-text">Deaths from drug overdoses are likely to increase
+                                                during the
+                                                coronavirus outbreak because of disruption to recovery routines and
+                                                access to
+                                                treatment,
+                                                according to counselors and people whose rehabilitation depends on daily
+                                                care..
+                                            </p>
+                                            <p class="card-text"><small class="text-muted">Last updated 3 mins
+                                                    ago</small></p>
+                                            <p class="card-text"><small class="text-muted">Reference:
+                                                    https://www.buzzfeednews.com/article/otilliasteadman/coronavirus-opioids-overdoses</small>
+                                            </p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
             </div>
         </div>
-
     </div>
     {{!-- main column2 --}}
     <div class="col-sm-3">
@@ -122,10 +123,7 @@
             If you see any suspicious activity, Report it!
         </p>
          <div id="police"></div>
-
     </div>
 </div>
-
 </div>
-
     <script type="text/javascript" src="/js/index.js"></script>
