--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -12,9 +12,13 @@
             <li class="nav-item">
                 <a class="nav-link" href="/user/register">Register</a>
             </li>
+             <li class="nav-item">
+                <a class="nav-link" href="/report">Report</a>
+            </li>
             <li class="nav-item navbar-right">
                 <a class="btn text-right text-white mr-4 bg-white text-dark" href="/auth/logout">Logout</a>
             </li>
+            
         </ul>
     </div>
 </nav>
