--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -7,10 +7,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link text-primary" href="/user/login">Login</a>
+                    <a class="nav-link text-primary" href="/info">Info</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/user/register">Register</a>
+                    <a class="btn text-right text-white mr-4 bg-white text-dark" href="/auth/logout">Logout</a>
                 </li>
             </ul>
         </div>
@@ -18,8 +18,8 @@
     <div class="container">
     <form>
   <div class="form-group">
-    <label for="exampleFormControlInput1">User</label>
-    <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="">
+    <label for="exampleFormControlInput1">User Email</label>
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
   </div>
   <div class="form-group">
     <label for="exampleFormControlSelect1">Select Organization</label>
