--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -29,6 +29,13 @@
   <div class="form-group">
     <label for="exampleFormControlTextarea1">Report</label>
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+    
   </div>
+  <button id="reportButton"> Submit </button>
   </div>
+  
 </form>
+
+<div class="fullReports">
+  
+</div>
