the post is on the page

--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -19,7 +19,7 @@
     <form>
   <div class="form-group">
     <label for="exampleFormControlSelect1">Select Organization</label>
-    <select class="form-control" id="exampleFormControlSelect1">
+    <select class="form-control" id="organization" >
       <option>InfODose</option>
       <option>CDC</option>
       <option>Local law enforcement</option>
@@ -28,7 +28,7 @@
   </div>
   <div class="form-group">
     <label for="exampleFormControlTextarea1">Report</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+    <textarea class="form-control" id="report" rows="5"></textarea>
     
   </div>
   <button id="reportButton"> Submit </button>
@@ -37,5 +37,7 @@
 </form>
 
 <div class="fullReports">
-  
+
 </div>
+
+<script type="text/javascript" src="/js/report.js"></script>
