--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,6 +23,11 @@
         <div class="footer-copyright text-center py-3">© 2020 Copyright: infODose
             <br>
             <a href="https://lit-crag-01772.herokuapp.com/"> lit-crag-01772.herokuapp.com/</a>
+            <img src="/images/darelogo.png" alt="" height="42" width="84">
+            <img src="/images/dealogo.png" alt="" height="42" width="84">
+            <img src="/images/hidtalogo.png" alt="" height="42" width="84">
+            <img src="/images/naddilogo.png" alt="" height="42" width="84">
+            <img src="/images/cimelinelogo.png" alt="" height="42" width="84">
         </div>
     </footer>
 
