--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,18 +1,18 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-        <a class="navbar-brand" href="/">InfODose</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-sm navbar-dark navbarC">
+        <span class="navbar-brand" href="/">InfODose</span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link text-primary" href="/user/login">Login</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/user/register">Register</a>
                 </li>
-            </ul>
+            </div>
         </div>
     </nav>
     <div class="container mt-4">
