--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,6 @@
 body {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 16px;
-   background-color: rgb(9, 72, 155);
    background-image: url("../images/cssinfoimage.jpg");
    color: black;
    font-weight: bolder;
@@ -21,12 +20,18 @@ body {
     font: large;
     text-align: center;
 }
-.navbarC {
-    background-image: url(../images/browntexture.jpg);
+.navlink {
+    color: black;
+}
+.navbar-dark .navbar-nav .nav-link {
+    color: black;
 }
 
-#navbarInfo {
-    background-image: url("../images/textured-gray.jpg");
+.navbar-brand {
+    color: black;
+    font: large;
+
+    
 }
 #warning {
     background-color: red;
@@ -44,7 +49,7 @@ body {
 }
 
 #loginDiv {
-    color: whitesmoke;
+    color: black;
 }
 .text-muted {
     color: black !important;
@@ -58,4 +63,7 @@ h5 {
 h3 {
     font-size: 20px;
     font-weight: bolder;
+}
+a {
+    color: black;
 }
