--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -25,8 +25,8 @@
                     <div class="card">
                         <div class="card-body">
                             <h3>Search:</h3>
-                            <p>Please enter the correct information as stated</p>
-                            <p>in the examples below for correct results.</p>
+                            <p>Please fill in the blanks as stated</p>
+                            <p>in the examples below for results.</p>
                             <form class="create-form">
                                 <div class="form-group" class="rounded">
                                     <label for="st">State:</label>
