--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -1,20 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-        <a class="navbar-brand" href="/">InfODose</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link text-primary" href="/info">Info</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn text-right text-white mr-4 bg-white text-dark" href="/auth/logout">Logout</a>
-                </li>
-            </ul>
+<nav class="navbar navbar-expand-sm navbar-dark navbarC">
+    <span class="navbar-brand" href="/">InfODose</span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ml-auto">
+            <a class="nav-item nav-link text-primary" href="/info">Info</a>
+            <a class="nav-item btn text-right text-white mr-4 bg-white text-dark" href="/auth/logout">Logout</a>
         </div>
-    </nav>
+
+    </div>
+</nav>
     <div class="container">
     <form>
   <div class="form-group">
