--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,31 +12,36 @@
     </div>
 </nav>
 
-
-
-<div class="container mt-4">
+<div class="container-fluid">
     <div class="row">
-        <div class="col-md-4 mx-auto" id="loginDiv">
-            <h1 class="text-center">Log In</h1>
-            <form class="alertAppend">
-                <div class="form-group">
-                    <label for="emailInput">Email address</label>
-                    <input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp">
+        <div class="col-sm-6">
+            <div class="container mt-4">
+                <div class="row">
+                    <div class="col-md-4 mx-auto" id="loginDiv">
+                        <h1 class="text-center">Log In</h1>
+                        <form class="alertAppend">
+                            <div class="form-group">
+                                <label for="emailInput">Email address</label>
+                                <input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp">
+                            </div>
+                            <div class="form-group">
+                                <label for="passwordInput">Password</label>
+                                <input type="password" class="form-control" id="passwordInput">
+                            </div>
+                            <button id="submitBtn" type="submit" class="btn btn-primary">Submit</button>
+                            <small class="form-text text-muted">Not Registered Yet..? <a
+                                    href="/user/register">Register</a></small>
+                        </form>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="passwordInput">Password</label>
-                    <input type="password" class="form-control" id="passwordInput">
-                </div>
-                <button id="submitBtn" type="submit" class="btn btn-primary">Submit</button>
-                <small class="form-text text-muted">Not Registered Yet..? <a href="/user/register">Register</a></small>
-            </form>
+            </div>
         </div>
+        <p style="text-align:center;">
+            <iframe width="640" height="365" align="middle" src="https://www.youtube.com/embed/s4LV0tBZncI?controls=0">
+            </iframe>
+        </p>
     </div>
 </div>
 
-<p style="text-align:center;">
-    <iframe width="420" height="315" align="middle" src="https://www.youtube.com/embed/s4LV0tBZncI?controls=0">
-    </iframe>
-</p>
 
 <script type="text/javascript" src="/js/login.js"></script>
